# cybersecurity-portfolio

./: 404.html  README.md  SUMMARY.md  generate_docs.sh  index.html  mkdocs.yml  sitemap.xml
Hack The Box/Jerry/: README.md
Pratical-Projects/: .gitignore
Pratical-Projects/Company-Directory-Management-System-C/: CMakeLists.txt
Pratical-Projects/Company-Directory-Management-System-C/inc/: Defines.h  Input.h  MainMenu.h  Output.h
Pratical-Projects/Company-Directory-Management-System-C/inc/admin/: AdminMenu.h  ManageBusiness.h  ManageCatalog.h  ManageReport.h
Pratical-Projects/Company-Directory-Management-System-C/inc/company/: AccessComment.h  AccessCompany.h  AccessReport.h  CompanyMenu.h
Pratical-Projects/Company-Directory-Management-System-C/inc/struct/: BusinessStruct.h  CommentStructure.h  CompanyStructure.h
Pratical-Projects/Company-Directory-Management-System-C/inc/user/: SubmitComment.h  SubmitRating.h  SubmitSearch.h  UserMenu.h
Pratical-Projects/Company-Directory-Management-System-C/src/: CMakeLists.txt  Input.c  MainMenu.c  Output.c  main.c
Pratical-Projects/Company-Directory-Management-System-C/src/admin/: AdminMenu.c  ManageBusiness.c  ManageCatalog.c  ManageReport.c
Pratical-Projects/Company-Directory-Management-System-C/src/company/: AccessComment.c  AccessCompany.c  AccessReport.c  CompanyMenu.c
Pratical-Projects/Company-Directory-Management-System-C/src/user/: SubmitComment.c  SubmitRating.c  SubmitSearch.c  UserMenu.c
docs/: _config.yml  index.md
pratical-projects/: README.md
projects/: index.html
search/: search_index.json
(+754 files in other folders)
